# backend_api

./: DEPLOYMENT_NOTES.md  Dockerfile  Todo.md  alembic.ini  docker-compose-dev.yml  docker-compose-prod.yml  gunicorn.service  nginx  notes.md  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 681d3eea530f_auto_phone_number.py  814d3de44522_add_last_few_columns_to_posts_table.py  88e5dc662013_auto_vote.py  b6e2e20652b2_add_foreign_key_to_posts_table.py  db6a3594364b_add_user_table.py  dd45d03f838e_add_content_column_to_posts_table.py  e10f23f0a4b4_create_post_table.py
app/: calculations.py  config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
tests/: conftest.py  database.py  test_calculations.py  test_posts.py  test_users.py  test_votes.py
