[project]
name = "backend-api"
version = "0.1.0"
description = "Learing the ropes of FastAPI Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.135.1",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.3",
    "pytest>=9.0.3",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.48",
    "uvicorn-worker>=0.4.0",
]
